--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
+	<com.hiekichi.touchchangecolor.TouchCCView
     android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/app_name"
+    android:layout_height="fill_parent" 
     />
 </LinearLayout>
